# red

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  init.sh  ls  }
src/: main.rs
src/lib/: mod.rs
src/lib/client/: mod.rs  ssh_client.rs
src/lib/clients/: mod.rs
src/lib/common/: mod.rs
src/lib/connection/: mod.rs  ssh_connection.rs
src/lib/errors/: mod.rs
src/lib/files/: mod.rs
src/lib/user/: mod.rs  s3_user.rs  ssh_user.rs
src/templates/: base.html
src/templates/components/: icons.html  new_file_modal.html  overlay.html
src/templates/errors/: 404.html
src/templates/red/: home.html  index.html  index.html.tera  main.html.tera
src/web/: common.rs  errors.rs  mod.rs  red.rs  session.rs  utils.rs
static/: home.css  package-lock.json  routines.js
