[package]
name = "red"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
tera = "1"
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
env_logger = "0.10"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5"
uuid = { version = "1", features = ["v4"] }
